fixed dark mode text

--- a/FitBoard/Profile/Profile.css
+++ b/FitBoard/Profile/Profile.css
@@ -15,6 +15,7 @@
     height: 50px;
     border-radius: 100%;
     border: 2px solid #eee;
+    object-fit: fill;
 }
 
 /* Sidebar Styles */
@@ -100,9 +101,9 @@
 
 /* User Section Styles */
 .user {
-    display: flex;
     align-items: center;
     margin: 1rem 0;
+    display: inline-flex;
 }
 
 .user p {
@@ -196,14 +197,20 @@
     max-width: 100%;
     padding: 1rem;
     opacity: 1;
+    color: white;
+}
+
+.main_content .container{
+    color: black;
 }
 
 .main_content:not(.dark-mode) {
-	background-color: white
+	background-color: white;
+    color: black;
 }
 
 .sidebar:not(.dark-mode) {
-	background-color: var(--gray)
+	background-color: var(--gray);
 }
 
 /* Container Styles */
